<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="
        http://maven.apache.org/POM/4.0.0
        http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>hoot-smalltalk</groupId>
    <artifactId>hoot-smalltalk</artifactId>
    <packaging>pom</packaging>
    <version>2020</version>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/nikboyd/hoot-smalltalk/blob/main/LICENSE.txt</url>
        </license>
    </licenses>

    <modules>
        <module>java-extend</module>
        <module>hoot-abstracts</module>
        <module>hoot-runtime</module>
        <module>hoot-compiler-ast</module>
        <module>hoot-compiler</module>
        <module>hoot-compiler-boot</module>
        <module>hoot-maven-plugin</module>
        <module>hoot-compiler-bundle</module>
        <module>libs-smalltalk</module>
        <module>libs-hoot</module>
        <module>libs-port</module>
        <module>hoot-libs-bundle</module>
        <module>hoot-docs-bundle</module>
    </modules>

    <properties>
        <group.name>hoot.smalltalk</group.name>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy.MMdd.HHmm</maven.build.timestamp.format>
        <build.timestamp>${maven.build.timestamp}</build.timestamp>

        <!-- track version references together! -->
        <version.hoot>2020.0101.0101</version.hoot>
        <version.hoot.libs>[2020.0101.0101,)</version.hoot.libs>

        <!-- keep ANTLR versions in sync -->
        <version.antlr>4.13.1</version.antlr>
        <version.antlr.st>4.3.4</version.antlr.st>

        <version.spring-boot>2.5.15</version.spring-boot>
        <version.slf4j>1.7.30</version.slf4j>
        <version.log4j>2.20.0</version.log4j>

        <version.maven.war>3.2.3</version.maven.war>
        <version.maven.asm>3.1.1</version.maven.asm>
        <version.maven-plugin>3.9.0</version.maven-plugin>
        <version.maven-resources>3.3.1</version.maven-resources>
        <version.maven.compiler>3.11.0</version.maven.compiler>
        <version.maven.surefire>2.22.1</version.maven.surefire>
        <version.maven.jacoco>0.8.10</version.maven.jacoco>
        <version.maven-ant>1.8</version.maven-ant>
        <runner-base>${user.dir}/shell</runner-base>

        <gitlab-group>9887672</gitlab-group>
        <gitlab-project>10019964</gitlab-project>

        <run-headless>-Djava.awt.headless=true</run-headless>
        <memory-args>-Xmx1024m -Xms1024m</memory-args>
        <compiler-args></compiler-args> <!-- default = none, see profile for 21 below -->
        <no-path-check>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</no-path-check>
        <test-args>${memory-args} ${no-path-check} ${run-headless}</test-args>

        <cloudsmith-libs>https://maven.cloudsmith.io/educery/hoot-libs/</cloudsmith-libs>
        <github-hosted-libs>https://maven.pkg.github.com/nikboyd/hoot-smalltalk/</github-hosted-libs>

    </properties>

    <repositories>
        <repository>
            <id>github</id>
            <url>${github-hosted-libs}</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
<!--
        <repository>
            <id>hoot-libs</id>
            <url>${cloudsmith-libs}</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
-->
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>github</id>
            <url>${github-hosted-libs}</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </pluginRepository>
<!--
        <pluginRepository>
            <id>hoot-libs</id>
            <url>${cloudsmith-libs}</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </pluginRepository>
-->
    </pluginRepositories>
    <distributionManagement>
        <repository>
            <id>github</id>
            <url>${github-hosted-libs}</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
<!--
        <repository>
            <id>hoot-libs</id>
            <url>${cloudsmith-libs}</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
-->
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>java-extend</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>hoot-abstracts</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>hoot-runtime</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>hoot-compiler-ast</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>hoot-compiler</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>hoot-maven-plugin</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>hoot-compiler-bundle</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>libs-smalltalk</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>libs-hoot</artifactId>
                <version>2020.0101.0101</version>
            </dependency>
            <dependency>
                <groupId>hoot-smalltalk</groupId>
                <artifactId>hoot-libs-bundle</artifactId>
                <version>2020.0101.0101</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${version.log4j}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.spring-boot}</version>
                <scope>import</scope>
                <type>pom</type>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4</artifactId>
                <version>${version.antlr}</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>ST4</artifactId>
                <version>${version.antlr.st}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.13.0</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.15.0</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>1.6.0</version>
            </dependency>

            <dependency>
                <groupId>org.apache.maven.resolver</groupId>
                <artifactId>maven-resolver-transport-file</artifactId>
                <version>1.8.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.resolver</groupId>
                <artifactId>maven-resolver-transport-http</artifactId>
                <version>1.8.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.resolver</groupId>
                <artifactId>maven-resolver-transport-wagon</artifactId>
                <version>1.8.1</version>
            </dependency>

            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-resolver-provider</artifactId>
                <version>3.8.6</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>hoot-smalltalk</groupId>
                    <artifactId>hoot-compiler-bundle</artifactId>
                    <version>2020.0101.0101</version>
                </plugin>
                <plugin>
                    <groupId>hoot-smalltalk</groupId>
                    <artifactId>hoot-maven-plugin</artifactId>
                    <version>2020.0101.0101</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.maven.compiler}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${version.maven-resources}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>${compiler-args}</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <deployAtEnd>true</deployAtEnd>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin><!-- generate JAR module names from artifact IDs -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>regex-property</id>
                        <goals>
                            <goal>regex-property</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                            <name>jar.module.name</name>
                            <value>${project.artifactId}</value>
                            <regex>\-</regex>
                            <replacement>\.</replacement>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin><!-- construct and inject module names into JARs -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <skip>true</skip>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>${group.name}.${jar.module.name}</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java-1.8</id>
            <activation>
                <jdk>1.8</jdk>
            </activation>
            <properties>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
            </properties>
        </profile>
        <profile>
            <id>java-9-10-support-1.8</id>
            <activation>
                <jdk>[9,11)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
                <maven.compiler.release>8</maven.compiler.release>
            </properties>
        </profile>
        <profile>
            <id>java-11-16-support-11</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>[11,17)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>11</maven.compiler.source>
                <maven.compiler.target>11</maven.compiler.target>
                <maven.compiler.release>11</maven.compiler.release>
            </properties>
        </profile>
        <profile>
            <id>java-17-plus</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>[17,21)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>11</maven.compiler.source>
                <maven.compiler.target>17</maven.compiler.target>
                <maven.compiler.release>17</maven.compiler.release>
            </properties>
        </profile>
        <profile>
            <id>java-21-plus</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>[21,)</jdk>
            </activation>
            <properties>
                <maven.compiler.source>11</maven.compiler.source>
                <maven.compiler.target>21</maven.compiler.target>
                <maven.compiler.release>21</maven.compiler.release>
                <version.spring-boot>3.1.4</version.spring-boot>
                <version.maven.jacoco>0.8.12</version.maven.jacoco>
                <compiler-args>-proc:full</compiler-args>
            </properties>
        </profile>
    </profiles>
</project>
